--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.4",
     "recharts": "^2.15.4"
